Reflow the children with style changed reason when a style changed reflow is targeted at a table.  Patch from Bernd Mielke <bernd_mozilla@gmx.de>.  b=198506  r+sr=dbaron  a=brendan